SERVER-114196 Fix $unionWith system variables initialization (#44389)

GitOrigin-RevId: a8811493ee761f6688f1b0db624b29725f32c291